fix word breaks in summaries

--- a/simple.css
+++ b/simple.css
@@ -380,7 +380,7 @@ summary {
   font-weight: bold;
   padding: 0.7rem 1rem;
   margin: -0.7rem -1rem;
-  word-break: break-all;
+/*  word-break: break-all;*/
 }
 
 details[open] > summary + * {
